--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -6,5 +6,8 @@
     "target": "es2016",
     "moduleResolution": "node",
     "outDir": "./dist/esm"
-  }
+  },
+  "exclude": [
+    "./src/test",
+  ]
 }
